Role added to User class